# SERA

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  modal_run.py  modal_train.py  pyproject.toml  repo_analysis.csv
eval/: run_eval.sh  serve_vllm.py  swebench_qwen.yaml  swebench_qwen_modal.yaml  swebench_vllm.yaml
scripts/: download_model.py  repo_analysis.py
sera/: config_schema.py  main.py  utils.py
sera/configs/: specialization_django.yaml  specialization_flask.yaml  specialization_pylint.yaml  specialization_sqlglot.yaml  specialization_starlette.yaml  specialization_sympy.yaml  swesmith_scaling.yaml
sera/configs/pipeline/: default_pipeline.yaml
sera/datagen/data/distill/: distill.py
sera/datagen/data/generate/: classes.py  no_bug_dataset.py
sera/datagen/data/postprocess/: postprocess.py  utils.py
sera/datagen/train/train_config/: axolotl_qwen3_8b.yaml
