[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sera"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "swesmith==0.0.7",
  "hydra-core==1.4.0.dev1",
  "omegaconf>=2.4.0.dev4",
  "anthropic==0.76.0",
  "networkx==3.6.1",
  "python-dotenv>=1.0.0",
  "safetensors>=0.7.0",
  "torch>=2.10.0",
]

[project.optional-dependencies]
eval = [
  "mini-swe-agent[all]>=2.2.6",
  "swe-rex[modal]>=1.4.0",
]

[tool.setuptools]
packages = ["sera"]

[tool.uv]
# hydra-core and omegaconf use dev pre-release versions
prerelease = "allow"
